--- a/digsmile/index.html
+++ b/digsmile/index.html
@@ -36,7 +36,7 @@
     </div>
     <nav class="header-nav">
       <ul class="nav-list">
-        <li class="nav-item"><a href="https://toryaoooo.github.io/digsmile/digsmile/"><img src="https://toryaoooo.github.io/digsmile/img/simbol-logo.svg" alt=""></a></li>
+        <li class="nav-item"><a href="/"><img src="https://toryaoooo.github.io/digsmile/img/simbol-logo.svg" alt=""></a></li>
         <li class="nav-item"><a href="https://toryaoooo.github.io/digsmile/about/">About us</a></li>
         <li class="nav-item"><a href="#">Works</a></li>
         <li class="nav-item"><a href="#">Culture</a></li>
