--- a/digsmile/index.html
+++ b/digsmile/index.html
@@ -18,7 +18,7 @@
 
   <header class="header flex.box ">
     <div class="site-title">
-      <a href="https://toryaoooo.github.io/digsmile/digsmile/">
+      <a href="//toryaoooo.github.io/digsmile/">
         <svg xmlns="http://www.w3.org/2000/svg" width="260" height="28.204" viewBox="0 0 260 28.204">
           <g id="site-logo" transform="translate(-59 -29)">
             <path id="前面オブジェクトで型抜き_1" data-name="前面オブジェクトで型抜き 1"
